fix : Static file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Jobs Score, 우리 회사의 잡스코어는? 우리회사와 내가 원하는 회사의 점수를 비교해보세요!"
+    />
+    <link rel="icon" href="/favicon.png" />
+    <meta property="og:image" content="/og.png" />
+    <title>Jobs Score</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      type="text/JavaScript"
+      src="https://developers.kakao.com/sdk/js/kakao.min.js"
+    ></script>
   </body>
 </html>
