--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
       name="description"
       content="Jobs Score, 우리 회사의 잡스코어는? 우리회사와 내가 원하는 회사의 점수를 비교해보세요!"
     />
+    <meta name="keywords" content="swyg, meta, jobscore" />
+    <meta name="og:site_name" content="jobscore" />
+    <meta name="og:title" content="jobscore" />
+    <meta
+      name="og:description"
+      content="Jobs Score, 우리 회사의 잡스코어는? 우리회사와 내가 원하는 회사의 점수를 비교해보세요!"
+    />
+    <meta name="og:type" content="Meta Website" />
+    <meta name="og:url" content="https://jobscore.swygbro.com/" />
+    <meta name="og:image" content="https://jobscore.swygbro.com/og.png" />
+    <meta name="twitter:title" content="jobscore" />
+    <script
+      defer
+      src="https://cdn.swygbro.com/public/widget/swyg-widget.js"
+    ></script>
     <link rel="icon" href="/favicon.png" />
     <meta property="og:image" content="/og.png" />
     <title>Jobs Score</title>
